Revert "Migrate server transport from Netty 3.10 to Netty 4.2 (Stage A)"
This reverts commit 6bc1f1f25542ffaad275db96f8a4df84a2012a08.